add api docs for crime entity
